add slide component for slider one

--- a/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/slider/slider.twig
@@ -22,11 +22,16 @@
     {{ autoplay ? 'autoplay' : '' }}
     {{ uiContainer ? 'ui-container' : '' }}
 >
-    {% for slide in slides %}
-        <div s-slider-slide>
-            {{ slide|raw }}
-        </div>
-    {% endfor %}
+    {% if slides and slides|length > 0 %}
+        {% for slide in slides %}
+            <div s-slider-slide>
+                {{ slide|raw }}
+            </div>
+        {% endfor %}
+    {% else %}
+        {{ content|raw }}
+    {% endif %}
+
 </s-slider>
 
 </div>
