--- a/packages/tools/sugar/src/views/_specs/bare/layout/layout.md.twig
+++ b/packages/tools/sugar/src/views/_specs/bare/layout/layout.md.twig
@@ -1,3 +1,6 @@
+{% extends 'sugar/readme/layouts/main/main.twig' %}
+{% block body %}
+
 <!--
 /**
  * @name            Layout
@@ -13,7 +16,7 @@
  */
 -->
 
-{{#> layout-doc }}
+{% set specs = readSpec('sugar.views.bare.layout') %}
 
 # Layout
 
@@ -24,6 +27,9 @@ This view allows you to generate quickly and efficiently fully responsive layout
 -   Generate fully responsive layouts
 -   Easy and nice layout string notation like `1 1 2 _ 1 1 3`
 -   Full support for medias specified in your `frontspec.json` file
+{% for spec in props(specs.props) %}
+- `{{ spec }}`
+{% endfor %}
 
 ## Usage
 
@@ -55,7 +61,7 @@ This view allows you to generate quickly and efficiently fully responsive layout
 #### Twig
 
 ```twig
-{% include 'sugar.bare.layout.layout' with {
+{{ '{%' }} include 'sugar.bare.layout.layout' with {
     content: '<h2>Hello world</h2>',
     layout: {
         desktop: '1 1 2 _ 1 1 3'
@@ -74,11 +80,13 @@ This view allows you to generate quickly and efficiently fully responsive layout
             bottom: '20'
         }
     }
-} %}
+} {{ '%}' }}
 ```
 
 ## Specifications
 
-{{> spec path='sugar.views.bare.layout' }}
+```js
+export default {{ specs|json_encode|raw }}
+```
 
 {% endblock %}
