--- a/packages/tools/sugar/src/views/twig/sugar/bare/typo/typo.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/bare/typo/typo.twig
@@ -1,31 +1,35 @@
-{% if type == 'lead' or type == 'p' %}
-    <p class="s-type--{{ type }}">
+{% if type == 'color' %}
+    <span class="s-tc--{{ id }}">
+        {{ html|raw }}
+    </span>
+{% if id == 'lead' or id == 'p' %}
+    <p class="s-typo--{{ id }}">
         {{ html|raw }}
     </p>
-{% elseif type == 'pre' or type == 'code' %}
-    <{{ type }} class="s-typo:{{ type }}">
+{% elseif id == 'pre' or id == 'code' %}
+    <{{ id }} class="s-typo--{{ id }}">
         {{ html|raw }}
-    </{{ type }}>
-{% elseif type == 'quote' or type == 'blockquote' %}
-    <blockquote class="s-typo:{{ type }}">
+    </{{ id }}>
+{% elseif id == 'quote' or id == 'blockquote' %}
+    <blockquote class="s-typo--{{ id }}">
         {{ html|raw }}
     </blockquote>
-{% elseif type == 'bold' or type == 'b' or type == 'strong' %}
-    <strong class="s-typo:{{ type }}">
+{% elseif id == 'bold' or id == 'b' or id == 'strong' %}
+    <strong class="s-typo--{{ id }}">
         {{ html|raw }}
     </strong>
-{% elseif type == 'italic' or type == 'i' %}
-    <em class="s-typo:{{ type }}">
+{% elseif id == 'italic' or id == 'i' %}
+    <em class="s-typo--{{ id }}">
         {{ html|raw }}
     </em>
-{% elseif type == 'mark' or type == 'del' or type == 'ins' or 'type' == 'sub' or type == 'sup' %}
-    <{{ type }} class="s-typo:{{ type }}">
+{% elseif id == 'mark' or id == 'del' or id == 'ins' or id == 'sub' or id == 'sup' %}
+    <{{ id }} class="s-typo--{{ id }}">
         {{ html|raw }}
-    </{{ type }}>
-{% elseif type|slice(0,1) == 'h' and type|length == 2 %}
-    <{{ type }} class="s-typo:{{ type }}">
+    </{{ id }}>
+{% elseif id|slice(0,1) == 'h' and id|length == 2 %}
+    <{{ id }} class="s-typo--{{ id }}">
         {{ html|raw }}
-    </{{ type }}>
+    </{{ id }}>
 {% else %}
     {{ html|raw }}
 {% endif %}
