--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -1,284 +1,382 @@
+@keyframes welcome-illustration-kraken-waves {
+  0% {
+    scale: 1 0.8;
+  }
+  50% {
+    scale: 1 1.2;
+  }
+  100% {
+    scale: 1 0.8;
+  }
+}
+@keyframes welcome-illustration-kraken-tentacules {
+  0% {
+    scale: 0.9;
+  }
+  50% {
+    scale: 1;
+  }
+  100% {
+    scale: 0.9;
+  }
+}
+
+.welcome-illustration-kraken {
+  position: absolute;
+  top: 50%;
+  right: calc(50% + 150px);
+  transform: translateX(100%) translateY(-50%);
+  width: 900px;
+  height: 100%;
+  pointer-events: none;
+  user-select: none;
+  z-index: 10;
+
+  /* [stop-color='#F2BC2B'] {
+        stop-color: sugar.color(accent, --alpha 0);
+    }
+    [stop-color='#4900E6'] {
+        stop-color: sugar.color(complementary, --alpha 0);
+    } */
+
+  .__tentacule-01,
+  .__tentacule-03,
+  .__tentacule-05,
+  .__tentacule-07 {
+    path {
+      stroke: sugar.color(base, foreground, --alpha 0.2);
+      fill: none;
+    }
+    animation: welcome-illustration-kraken-tentacules 4s ease-in-out infinite;
+  }
+  .__tentacule-02,
+  .__tentacule-04,
+  .__tentacule-06 {
+    path {
+      stroke: sugar.color(base, foreground, --alpha 0.08);
+      fill: none;
+    }
+    animation: welcome-illustration-kraken-tentacules 3s ease-in-out infinite;
+    animation-delay: 0.7s;
+  }
+
+  /* [fill='#F7C032'] {
+    fill: url(#gradient-accent);
+  }
+  [fill='#5929FB'],
+  [fill='#4D1AF9'] {
+    fill: url(#gradient-complementary);
+  }
+  [fill='white'] {
+    fill: sugar.color(base, --alpha 0.2);
+    mix-blend-mode: multiply !important;
+  } */
+
+  .__gradient-accent-start {
+    stop-color: sugar.color(accent);
+  }
+  .__gradient-accent-end {
+    stop-color: sugar.color(accent, --lighten 5%);
+  }
+  .__gradient-complementary-start {
+    stop-color: sugar.color(complementary);
+  }
+  .__gradient-complementary-end {
+    stop-color: sugar.color(complementary, --lighten 10%);
+  }
+
+  .__cup {
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    transform: translateX(-50%) translateY(-100%);
+    z-index: 10;
+  }
+  .__smoke {
+    position: absolute;
+    left: 50%;
+    top: -150px;
+    transform: translateX(calc(-50% - 50px)) translateY(0);
+    z-index: 5;
+
+    video {
+      position: absolute;
+      top: 0;
+      left: calc(50% + 50px);
+      transform: translate(-50%, 0);
+      height: 750px;
+      opacity: 0.6;
+    }
+  }
+
+  .__tentacule-01 {
+    position: absolute;
+    bottom: 100px;
+    left: 0;
+  }
+  .__tentacule-02 {
+    position: absolute;
+    bottom: 350px;
+    left: -60px;
+  }
+  .__tentacule-03 {
+    position: absolute;
+    top: 120px;
+    left: 450px;
+  }
+  .__tentacule-04 {
+    position: absolute;
+    top: 300px;
+    left: 510px;
+  }
+  .__tentacule-05 {
+    position: absolute;
+    bottom: 300px;
+    left: 550px;
+  }
+  .__tentacule-06 {
+    position: absolute;
+    bottom: 200px;
+    left: 560px;
+  }
+  .__tentacule-07 {
+    position: absolute;
+    bottom: 100px;
+    left: 400px;
+    /* filter: drop-shadow(4px -10px 10px rgba(0, 0, 0, 0.2)); */
+  }
+
+  .__waves-cup {
+    position: absolute;
+    bottom: 95px;
+    left: 260px;
+    z-index: 20;
+    opacity: 0.7;
+    animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+  }
+
+  .__waves-01,
+  .__waves-03,
+  .__waves-05,
+  .__waves-07,
+  .__waves-09 {
+    opacity: 0.3;
+    animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+  }
+  .__waves-02,
+  .__waves-04,
+  .__waves-06,
+  .__waves-08,
+  .__waves-10 {
+    opacity: 0.6;
+    animation: welcome-illustration-kraken-waves 3s ease-in-out infinite;
+    animation-delay: 1.5s;
+  }
+
+  .__waves-01 {
+    position: absolute;
+    bottom: 70px;
+    left: -150px;
+    z-index: 20;
+  }
+  .__waves-02 {
+    position: absolute;
+    bottom: 50px;
+    left: 30px;
+    z-index: 20;
+  }
+  .__waves-03 {
+    position: absolute;
+    bottom: 70px;
+    left: 200px;
+    z-index: 20;
+  }
+  .__waves-04 {
+    position: absolute;
+    bottom: 60px;
+    left: 300px;
+    z-index: 20;
+  }
+  .__waves-05 {
+    position: absolute;
+    bottom: 30px;
+    left: 230px;
+    z-index: 20;
+  }
+  .__waves-06 {
+    position: absolute;
+    bottom: 60px;
+    left: 450px;
+    z-index: 20;
+  }
+  .__waves-07 {
+    position: absolute;
+    bottom: 30px;
+    left: 500px;
+    z-index: 20;
+  }
+  .__waves-08 {
+    position: absolute;
+    bottom: 50px;
+    left: 650px;
+    z-index: 20;
+  }
+  .__waves-09 {
+    position: absolute;
+    bottom: 30px;
+    left: 760px;
+    z-index: 20;
+  }
+  .__waves-10 {
+    position: absolute;
+    bottom: 90px;
+    left: 890px;
+    z-index: 20;
+  }
+
+  .__discover-02 {
+    position: absolute;
+    top: 70%;
+    left: 0;
+    width: calc(100% - 100px);
+    transform: translateX(50px) translateY(-50%);
+    z-index: 100;
+  }
+
+  .__shadow {
+    display: block;
+    position: absolute;
+    top: 92%;
+    left: 0;
+    width: calc(100% - 100px);
+    height: 10px;
+    transform: translateX(100px);
+    background: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0)
+    );
+    filter: blur(10px);
+  }
+}
+
 /* @sugar.partial (welcome) { */
 #homepage-welcome {
-    height: calc(100vh - 200px);
-    min-height: 800px;
-    text-align: left;
+  height: calc(100vh - 200px);
+  min-height: 800px;
+  text-align: left;
+  position: relative;
+  z-index: 10;
+  padding-block: 0;
+
+  @sugar.media mobile {
+    height: auto;
+    height: calc(100vh - 100px);
+
+    text-align: center;
     position: relative;
-    z-index: 10;
+    top: 100px;
+    left: 0;
+    width: 100%;
+  }
+
+  .__logo {
+    width: 270px;
 
     @sugar.media mobile {
-        height: auto;
-        height: calc(100vh - 100px);
+      display: block;
+    }
+  }
 
-        text-align: center;
-        position: relative;
-        top: 100px;
-        left: 0;
-        width: 100%;
+  input {
+    text-align: left;
+  }
+
+  .s-slider__slides {
+    display: flex;
+
+    @sugar.media mobile {
+      height: auto;
+      min-height: 600px;
+      height: calc(100vh - 100px);
+      /* align-items: start; */
+    }
+  }
+
+  .s-slider[lnf='welcome-header'] {
+    margin-top: 100px;
+    height: calc(100% - 100px);
+    opacity: 0;
+    transition: sugar.transition();
+    position: absolute;
+    z-index: 0;
+
+    &[mounted] {
+      opacity: 1;
+      position: relative;
     }
 
-    .__logo {
-        width: 270px;
+    @sugar.media mobile {
+      height: auto;
+      margin-top: 0;
+    }
+  }
 
-        @sugar.media mobile {
-            display: block;
-        }
+  [s-slider-slide]:not(.s-slider .s-slider [s-slider-slide]) {
+    flex: 0 0 100%;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    @sugar.transition (fast);
+
+    &.pre-active {
+      opacity: 1;
+      transition-delay: 0.5s !important;
     }
 
-    .__rating-1,
-    .__rating-2,
-    .__rating-3 {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-
-        .s-loader {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 30px;
-        }
-
-        .s-avatar {
-        }
-        .s-tooltip {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            right: auto;
-            bottom: auto;
-            white-space: nowrap;
-
-            &.s-tooltip--left {
-                left: -10px;
-                transform: translateX(-100%) translateY(-50%);
-            }
-            &.s-tooltip--right {
-                left: calc(100% + 10px);
-                transform: translateX(0) translateY(-50%);
-            }
-        }
+    &.active {
+      opacity: 1;
     }
-    .__rating-1 {
-        transform: translate(-700px, -250px) scale(0.8);
-    }
-    .__rating-2 {
-        transform: translate(-580px, 110px) scale(0.6);
-    }
-    .__rating-3 {
-        transform: translate(550px, 0px);
+  }
+
+  .s-slider .s-slider [s-slider-slide] {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+  }
+
+  .__content {
+    /* width: 50%; */
+    pointer-events: none;
+    padding-right: 35%;
+    /* text-align: center; */
+    /* padding-top: 200px; */
+
+    > * {
+      pointer-events: all;
     }
 
-    /* .__loader-1 {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            font-size: 40px;
-            transform: translateX(-50%);
-            @sugar.color (accent);
-        } */
-
-    /* .__icon-1 {
-            position: absolute;
-            top: 21%;
-            left: 5%;
-            font-size: 30px;
-            transform: rotate(-15deg);
-        }
-        .__icon-2 {
-            position: absolute;
-            top: 40%;
-            right: 0;
-            font-size: 40px;
-            transform: rotate(10deg);
-        }
-        .__icon-3 {
-            position: absolute;
-            top: 56%;
-            left: 12%;
-            font-size: 50px;
-        }
-        .__icon-4 {
-            position: absolute;
-            top: 0;
-            right: 25%;
-            font-size: 60px;
-            transform: rotate(15deg);
-        }
-        .__icon-5 {
-            position: absolute;
-            top: 70%;
-            right: 23%;
-            font-size: 40px;
-        } */
-
-    .s-avatar {
-        font-size: 100px;
-        /* @sugar.color (#ffffff); */
-        /* @sugar.depth (20); */
-
-        /* @sugar.theme.when dark {
-        @sugar.color (#383F49);
-        } */
-    }
-    .s-tooltip {
-        @sugar.color (#ffffff);
-        /* color: sugar.color(main, text); */
-        @sugar.depth (20);
-
-        @sugar.theme.when dark {
-            @sugar.color (#383F49);
-        }
-
-        .s-rating {
-            @sugar.color (accent);
-        }
+    .s-typo--h3,
+    .s-typo--p,
+    .s-typo--lead {
+      /* margin-inline: auto; */
     }
 
-    .__loader {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    @sugar.media >=wide {
+      @sugar.container (wide);
     }
 
-    input {
-        text-align: left;
+    @sugar.media mobile {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      transform: none;
+      padding: sugar.padding(30) sugar.padding(30);
     }
-
-    .s-slider__slides {
-        display: flex;
-
-        @sugar.media mobile {
-            height: auto;
-            min-height: 600px;
-            height: calc(100vh - 100px);
-            /* align-items: start; */
-        }
-    }
-
-    .s-slider[lnf='welcome-header'] {
-        margin-top: 100px;
-        height: calc(100% - 100px);
-        opacity: 0;
-        transition: sugar.transition();
-        position: absolute;
-        z-index: 0;
-
-        &[mounted] {
-            opacity: 1;
-            position: relative;
-        }
-
-        @sugar.media mobile {
-            height: auto;
-            margin-top: 0;
-        }
-    }
-
-    [s-slider-slide]:not(.s-slider .s-slider [s-slider-slide]) {
-        flex: 0 0 100%;
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        opacity: 0;
-        @sugar.transition (fast);
-
-        &.pre-active {
-            opacity: 1;
-            transition-delay: 0.5s !important;
-        }
-
-        &.active {
-            opacity: 1;
-        }
-    }
-
-    .s-slider .s-slider [s-slider-slide] {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        color: white;
-    }
-
-    /* js */
-    .__icon-1 {
-        font-size: 100px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-480px, -250px) rotate(-10deg) scale(0.5);
-        opacity: 0.2;
-    }
-    /* ts */
-    .__icon-2 {
-        font-size: 100px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(430px, -250px) rotate(10deg) scale(0.7);
-        opacity: 0.2;
-    }
-    /* css */
-    .__icon-3 {
-        font-size: 100px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-380px, 230px) rotate(5deg) scale(0.6);
-        opacity: 0.2;
-    }
-    /* md */
-    .__icon-4 {
-        font-size: 100px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(300px, 250px) rotate(-10deg) scale(0.4);
-        opacity: 0.3;
-    }
-    .__icon-5 {
-        font-size: 100px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-450px, -50px) rotate(-10deg) scale(0.6);
-        opacity: 0.2;
-    }
-    .__icon-6 {
-        font-size: 100px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(300px, 150px) rotate(10deg) scale(0.4);
-        opacity: 0.1;
-    }
-
-    .__content {
-        width: 100%;
-        text-align: center;
-        /* padding-top: 200px; */
-
-        .s-typo--h3,
-        .s-typo--p,
-        .s-typo--lead {
-            margin-inline: auto;
-        }
-
-        @sugar.media >=wide {
-            @sugar.container (wide);
-        }
-
-        @sugar.media mobile {
-            position: relative;
-            top: 0;
-            left: 0;
-            width: 100%;
-            transform: none;
-            padding: sugar.padding(30) sugar.padding(30);
-        }
-    }
+  }
 }
-/* } */
