--- a/packages/tools/sugar/src/views/twig/sugar/bare/typo/typo.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/bare/typo/typo.twig
@@ -2,7 +2,7 @@
     <span class="s-tc--{{ id }}">
         {{ html|raw }}
     </span>
-{% if id == 'lead' or id == 'p' %}
+{% elseif id == 'lead' or id == 'p' %}
     <p class="s-typo--{{ id }}">
         {{ html|raw }}
     </p>
