--- a/packages/core/cli/src/doc/README.md.twig
+++ b/packages/core/cli/src/doc/README.md.twig
@@ -24,8 +24,8 @@ This CLI is the main entry point in the Coffeekraken ecosystem.
 ## Features
 
 -   Init new projects with ease `sugar new`
--   Launch your development environment with ease `sugar dev`
--   Build your project for production `sugar build`
+-   Launch your development environment with ease `sugar kitchen.run dev`
+-   Build your project for production `npm run build`
 -   Execute commands provided by other packages like:
     -   Build your favicon `sugar favicon.build`
     -   Build and compress your images `sugar images.build`
