--- a/packages/components/s-panel-component/src/css/s-panel.css
+++ b/packages/components/s-panel-component/src/css/s-panel.css
@@ -25,12 +25,14 @@
 }
 
 .s-panel__backdrop {
-    position: absolute;
+    /* position: absolute;
     top: 0;
     left: 0;
     z-index: 0;
     width: 100%;
-    height: 100%;
+    height: 100%; */
+    @sugar.ui.backdrop;
+    z-index: 0;
 }
 
 .s-panel__container {
