--- a/packages/@websites/coffeekraken-io/src/views/layouts/main.css
+++ b/packages/@websites/coffeekraken-io/src/views/layouts/main.css
@@ -1,44 +1,44 @@
 .content {
-    padding-top: 80px;
-    position: relative;
-    z-index: 1;
-    min-height: 100vh;
+  padding-top: 80px;
+  position: relative;
+  z-index: 1;
+  min-height: 100vh;
 }
 #homepage .content {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .bkg {
-    /* display: none; */
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    transition: opacity 0.5s ease-out;
-    /* background-image: url('/dist/img/welcome/welcome-bg-light-01.jpg'); */
-    background-position: 50% bottom;
-    background-size: cover;
-    opacity: 0.5;
+  /* display: none; */
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  transition: opacity 0.5s ease-out;
+  /* background-image: url('/dist/img/welcome/welcome-bg-light-01.jpg'); */
+  background-position: 50% bottom;
+  background-size: cover;
+  opacity: 0.2;
 
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
 
-    @sugar.theme.when dark {
-        background-image: url('/dist/img/background.png');
-        /* opacity: 0.05; */
-    }
+  @sugar.theme.when dark {
+    background-image: url('/dist/img/background.png');
+    /* opacity: 0.05; */
+  }
 
-    @sugar.media mobile {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        background-position: 50% -50px;
-        /* transform: translateY(-100px); */
-    }
+  @sugar.media mobile {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    background-position: 50% -50px;
+    /* transform: translateY(-100px); */
+  }
 
-    /* background-image: linear-gradient(
+  /* background-image: linear-gradient(
     -90deg,
     sugar.color(base, background),
     sugar.color(base, background, --darken 2%)
@@ -46,13 +46,13 @@
 }
 [s-sugar]:not(#homepage) .bkg,
 .scrolled .bkg {
-    opacity: 0.05;
+  opacity: 0.05;
 }
 [s-sugar]:not(#homepage),
 .scrolled {
-    @sugar.theme.when dark {
+  /* @sugar.theme.when dark {
         .bkg {
             opacity: 0.3;
         }
-    }
+    } */
 }
